# ai_battle_drone

./: CMakeLists.txt  README.md  package.xml
launch/: ._load_inner_walls.launch  apriltag2.launch  challenge_1_world.launch  full_quad.launch  gazebo_world.launch  load_inner_walls.launch  load_uas_in_gazebo.launch  vehicle_spawn.launch
params/: ai_drone  px4_config.yaml  px4_pluginlists.yaml
params/apriltag2/: settings.yaml  tags.yaml
rosinstall/: basic.rosinstall
scripts/: setup_ai_drone.sh
